# normal

./: Cargo.toml  README.md
src/: bin.rs  id_pairs_model.rs  id_pairs_model_test.rs  id_pairs_util.rs  lib.rs  lib_test.rs  normal_model.rs  normal_model_test.rs  normal_util.rs
