[package]
name = "normal"
version = "0.1.0"
authors = ["Jonathan Bredin <bredin@acm.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "normal"
path = "src/lib.rs"

[[bin]]
name = "normal-util"
path = "src/normal_util.rs"

[dependencies]
sqlite = "0.25.3"
structopt = "0.3.17"
